--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
             <h1 class="heading"><br><br>Let's keep in touch</h1>
             <form method="POST" action="https://formspree.io/sai_puzikov@hotmail.com">
                 <p>
-                    <label for="name">Your Name</label>
+                    <label>Your Name</label>
                     <input type="text" name="name" class="input" >
                 </p>
                 <p>
-                    <label for="email">Your Email</label>
+                    <label>Your Email</label>
                     <input type="text" name="email" class="input">
                 </p>
                 <p>
-                    <label for="message">Your Message</label>
+                    <label>Your Message</label>
                     <textarea name="message" cols="88" rows="6" class="textarea" ></textarea>
                 </p>
                     <input type="submit" name="submit" value="Send your message" class="submit">
@@ -92,10 +92,10 @@
         <div id="links">
             <p>
                 <br><br><br><br>
-                <a href="https://github.com/YuriiPuzikov"><img src="img/git.jpg" alt="git"</a>
-                <a href="https://www.linkedin.com/in/yurii-puzikov/"><img src="img/link.png" alt="linkeding"</a>
-                <a href="https://www.facebook.com/puzia.has.no.brains"><img src="img/fb.png" alt="facebook"</a>
-                <a href="https://www.instagram.com/sai_puzia/"><img src="img/inst.png" alt="instagramm"</a>
+                <a href="https://github.com/YuriiPuzikov"><img src="img/git.jpg" alt="git"></a>
+                <a href="https://www.linkedin.com/in/yurii-puzikov/"><img src="img/link.png" alt="linkeding"></a>
+                <a href="https://www.facebook.com/puzia.has.no.brains"><img src="img/fb.png" alt="facebook"></a>
+                <a href="https://www.instagram.com/sai_puzia/"><img src="img/inst.png" alt="instagramm"></a>
             </p>
         </div>
     </footer>
